--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=JetBrains+Mono:wght@500;700&display=swap');
+
+:root {
+  --color-charcoal: #24232C;
+  --color-grey: #817D92;
+  --color-white: #E6E5EA;
+  --color-black: #18171F;
+  --color-green: #A4FFAF;
+  --color-red: #F64A4A;
+  --color-orange: #FB7C58;
+  --color-yellow: #F8CD65;
+  --text-lg: 32px;
+  --text-md: 24px;
+  --text-body: 18px;
+  --line-height-lg: 43px;
+  --line-height-md: 31px;
+  --line-height-body: 23px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  font-family: 'JetBrains Mono', monospace;
+  background-color: var(--color-black);
 }
